# linkedin-ai-automator

./: .env  .gitignore  Readme.md  git-commit-guide.md  linkedin_debug.html  pyproject.toml  test_agent.py  test_db.py  test_dispatcher.py  test_log.py  test_logger.py  test_session.py  test_settings.py
agent/: chain_agent.py  decision_engine.py  ollama_client.py  state_schema.py  task_dispatcher.py
browser/: dom_snapshot.py  session_manager.py
config/: settings.py
data/: task_log.csv  user_config.csv
snapshots/: dom.html
state/: db_manager.py  linkedin_snapshot.html  task_logger.py
tasks/: apply_jobs.py  comment_trending.py  connect_people.py  daily_post.py  read_inbox.py
tools/: extract_username_tool.py  get_linkedin_html.py  get_username.py
utils/: csv_loader.py  task_logger.py
