[tool.poetry]
name = "linkedinautomation"
version = "0.1.0"
description = ""
authors = ["Aadarsh Pandey <aadarshpandey.pandey@gmail.com>"]
readme = "README.md"
package-mode = false  # Optional: disables need for src layout or packaging

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
playwright = "^1.52.0"
python-dotenv = "^1.1.0"
langchain = "^0.3.25"
requests = "^2.32.4"
pandas = "^2.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
